--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
-  <title>Eat&Grow Bakery - About</title>
+  <title>midterm</title>
 </head>
 <body>
     <div id="skip-links">
