--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <div id="skip-links">
-    <a href="home.html" class="skip-link" tabindex="0"></a>
+    <a href="index.html" class="skip-link" tabindex="0"></a>
   </div>
 
   <header role="banner">
@@ -23,9 +23,9 @@
     <h1 class="figure-bakery">Eat&Grow Bakery</h1>
     <nav role="navigation">
       <ul>
-        <li><a href="home.html" role="menuitem">Home</a></li>
+        <li><a href="index.html" role="menuitem">Home</a></li>
         <li><a href="about.html" role="menuitem">About</a></li>
-        <li><a href="contact.html" role="menuitem">Contact</a></li>
+        <li><a href="Contact.html" role="menuitem">Contact</a></li>
       </ul>
     </nav>
   </header>
