--- a/Contact.html
+++ b/Contact.html
@@ -17,9 +17,9 @@
     <h2 class="figure-bakery">Eat&Grow Bakery</h2>
     <nav role="navigation">
       <ul>
-        <li><a href="home.html" role="menuitem">Home</a></li>
+        <li><a href="index.html" role="menuitem">Home</a></li>
         <li><a href="about.html" role="menuitem">About</a></li>
-        <li><a href="contact.html" role="menuitem">Contact</a></li>
+        <li><a href="Contact.html" role="menuitem">Contact</a></li>
       </ul>
     </nav>
   </header>
