--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
         <h2 class="figure-bakery">Eat&Grow Bakery</h2>
         <nav>
             <ul class="main-menu">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
