--- a/Contact.html
+++ b/Contact.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="index.html" role="menuitem">Home</a></li>
         <li><a href="about.html" role="menuitem">About</a></li>
-        <li><a href="Contact.html" role="menuitem">Contact</a></li>
+        <li><a href="contact.html" role="menuitem">Contact</a></li>
       </ul>
     </nav>
   </header>
