--- a/Contact.html
+++ b/Contact.html
@@ -23,6 +23,7 @@
       </ul>
     </nav>
   </header>
+  <!--Contact Form For the Customers+ ARIA Roles-->
 
   <div class="contact-form" role="form">
     <h2>Reach out to us.</h2>
@@ -37,6 +38,7 @@
       </section>
     </form>
   </div>
+  <!--Footer with one more ARIA role-->
 
   <footer role="contentinfo">
     <p>&copy; 2023 Eat&Grow. All rights reserved.</p>
