--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <title>midterm</title>
 </head>
 <body>
+    <!--skip links-->
     <div id="skip-links">
         <a href="about.html" class="skip-link" tabindex="0"></a>
     </div>
@@ -23,6 +24,7 @@
             </ul>
         </nav>
     </header>
+    <!--The content about the how bakery started-->
 
     <section id="about-content" class="content">
         <h2>About us</h2>
@@ -33,6 +35,7 @@
         <p>Word quickly spread about the unique offerings of Eat&Grow, attracting not only locals but also curious tourists eager to experience a culinary adventure. The bakery became a meeting ground for Ottawans from all walks of life, where conversations flowed as smoothly as the chai, and laughter echoed against the backdrop of Ottawa's urban charm.</p>
         <p>Seasons changed, but the allure of Eat&Grow remained constant. The bakery's success was etched not only in the delectable flavors that graced its counters but also in the sense of community it cultivated. Eat&Grow Bakery had become an integral part of Ottawa's identity, a testament to the idea that in the heart of a city, where cultures converge, a simple bite could be a gateway to a world of shared experiences and boundless joy.</p>
     </section>
+    <!--copyright information & footer-->
 
     <footer>
         <p>&copy; 2023 Eat&Grow. All rights reserved.</p>
