--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
   <title>midterm</title>
+  <!--Tag to put a background image-->
   <style>
     body {
       background-image: url('Images/Bakery 1.jpg');
@@ -13,6 +14,7 @@
   </style>
 </head>
 <body>
+  <!--Skip Links-->
 
   <div id="skip-links">
     <a href="index.html" class="skip-link" tabindex="0"></a>
@@ -29,6 +31,7 @@
       </ul>
     </nav>
   </header>
+  <!--All the content and a Few Aria Labels-->
 
   <section id="main-content" class="content" role="main">
     <h2>Welcome!</h2>
@@ -82,7 +85,7 @@
     
     <a href="about.html" aria-label="Learn More" style="margin-top: 20px;"><button class="curved-button" type="button">Learn More</button></a>
   </section>
-
+<!--Footer Section + ARIA role-->
   <footer class="footer" role="contentinfo">
     <p>&copy; 2023 Eat&Grow. All rights reserved.</p>
   </footer>
